The "Everything" commit

--- a/src/main/deploy/www/index.html
+++ b/src/main/deploy/www/index.html
@@ -14,7 +14,8 @@
 	            </div>
 	            <ul class="nav navbar-nav">
 	                <li><a href="constants.html">Constants</a></li>
-	                <li><a href="firescope.html">FireScope</a></li>
+			<li><a href="firescope.html">FireScope</a></li>
+			<li><a href="values.html">Values</a></li>
 	            </ul>
 	        </div>
 	    </nav>
