--- a/src/main/deploy/www/constants.html
+++ b/src/main/deploy/www/constants.html
@@ -15,6 +15,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="constants.html">Constants</a></li>
                     <li><a href="firescope.html">FireScope</a></li>
+                    <li><a href="values.html">Values</a></li>
                 </ul>
             </div>
         </nav>
